# mcp-oauth-gateway

./: .bandit  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  config.docker.yaml  config.example.yaml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-all.txt  requirements-dev.txt  requirements-redis.txt  requirements-vault.txt  requirements.txt
.github/workflows/: deploy-docs.yml  docker-publish.yml  lint.yml  pr-release.yml  release.yml  test.yml
demo/: Dockerfile  fastmcp_server.py
docs/: architecture.md  index.md  mermaid-markdown-all.ts  package.json  pnpm-lock.yaml  quick-start.md
docs/.vitepress/: config.mts
docs/.vitepress/components/: Mermaid.vue
docs/.vitepress/theme/: custom.css  index.ts
src/: __init__.py  gateway.py
src/api/: metadata.py
src/auth/: __init__.py  client_registry.py  models.py  oauth_server.py  provider_manager.py  token_manager.py
src/config/: __init__.py  config.py
src/middleware/: __init__.py  logging_middleware.py
src/proxy/: __init__.py  mcp_proxy.py
src/storage/: __init__.py  base.py  manager.py  memory.py  redis.py  vault.py
tests/: __init__.py  conftest.py
tests/api/: test_metadata.py
tests/auth/: test_client_registry.py  test_multi_provider_constraints.py  test_oauth_server.py  test_provider_manager.py  test_single_provider.py  test_token_manager.py
tests/config/: test_config.py
tests/gateway/: test_middleware.py  test_provider_determination.py
tests/integration/: test_resilient_oauth.py
tests/proxy/: test_mcp_proxy.py
tests/storage/: fakes.py  test_basic_functionality.py  test_memory_storage.py  test_redis_storage.py  test_storage_config_validation.py  test_storage_manager.py  test_vault_storage.py
tests/utils/: __init__.py  crypto_helpers.py
